update section styles

--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
         </div>
         <div id="top-img" class="img-invert-world"></div>
     </header>
+    
+    <div class="container-img-invert-world">
+        <div id="bottom-img" class="img-invert-world"></div>
+    </div>
 
     <main>
-        <div id="bottom-img" class="img-invert-world"></div>
 
         <section id="inverted-world" class="container">
             <div class="content">
@@ -36,7 +39,7 @@
 
         <section id="trailer" class="container">
             <div class="media">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/otutSrxYpa4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="473" height="237" src="https://www.youtube.com/embed/otutSrxYpa4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
 
             <div class="content">
@@ -57,6 +60,9 @@
                 <li class="image-content">
                     <img src="./assets/images/content/serie-image-03.png" alt="">
                 </li>
+                <li class="background-image">
+                    <img src="./assets/images/backgrounds/lamps.png" alt="">
+                </li>
             </ul>
         </section>
 
@@ -67,7 +73,7 @@
             </div>
 
             <div class="content form">
-                <h3>entre para o clube de d&d e tenha experiências de outro mundo.</h3>
+                <h3>entre para o clube de d&d e tenha experiências de <span>outro mundo</span></h3>
                 <form action="">
                     <label for="name">Nome</label>
                     <input type="text" name="name" id="name">
@@ -80,6 +86,8 @@
 
                     <label for="character">Personagem</label>
                     <textarea name="character" id="character" cols="30" rows="10"></textarea>
+
+                    <button type="button" id="">Me inscrever</button>
                 </form>
             </div>
         </section>
