--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Mundo Invertido</title>
     <link rel="stylesheet" href="./style.css">
 </head>
-<body class="dark-theme">
+<body class="light-theme">
     <header>
         <audio id="music">
             <source src="./assets/musics/normal-world.mpeg">
@@ -95,5 +95,26 @@
             <img src="./assets/images/footer/logo.svg" alt="Logo da DIO">
         </div>
     </footer>
+
+    <script>
+        window.addEventListener('click', function() {
+            const audio = document.getElementById('music');
+            audio.play();
+            audio.volume = 0.2;
+        })
+
+        function switchTheme() {
+            document.body.classList.toggle('dark-theme');
+            document.body.classList.toggle('light-theme');
+
+            const theme = document.body.classList[0];
+            const music = theme === 'light-theme' ? 'normal-world.mpeg' : 'inverted-world.mpeg';
+
+            const audio = document.getElementById('music');
+            audio.src = `assets/musics/${music}`;
+            audio.play();
+            audio.volume = 0.2;
+        }
+    </script>
 </body>
 </html>
